tests/baselines/reference/selfReferencingSpreadInLoop.errors.txt
selfReferencingSpreadInLoop.ts(1,5): error TS7034: Variable 'additional' implicitly has type 'any[]' in some locations where its type cannot be determined.
selfReferencingSpreadInLoop.ts(3,22): error TS7005: Variable 'additional' implicitly has an 'any[]' type.


==== selfReferencingSpreadInLoop.ts (2 errors) ====
    let additional = [];
        ~~~~~~~~~~
!!! error TS7034: Variable 'additional' implicitly has type 'any[]' in some locations where its type cannot be determined.
    for (const subcomponent of [1, 2, 3]) {
        additional = [...additional, subcomponent];
                         ~~~~~~~~~~
!!! error TS7005: Variable 'additional' implicitly has an 'any[]' type.
    }
    